    - Fixed a transparency glitch in `winduprobot'.
    - Better detection of user activity on modern GNOME systems.
  * xscreensaver*.postrm/postinst/preinst: Remove obsolete parts used in
    lenny->squeeze and potato->woody transitions
  * Do not overwrite user-configured /etc/X11/app-defaults/XScreenSaver
    Thanks to Bastien Roucariès for initial patch (Closes: #767019)
  * Replace GNOME with MATE in desktop files stub (Closes: #766880)
  * debian/copyright: Use unique short names for "other" licenses

 -- Tormod Volden <debian.tormod@gmail.com>  Sun, 19 Jul 2015 11:50:31 +0200

xscreensaver (5.30-1) unstable; urgency=low

  * New upstream release 5.30
    - New hack, `winduprobot'.
    - Many improvements to `lament', including Leviathan.
    - Fixed the normals in `flyingtoasters': shading is correct now.
    - Dragging has inertia now.
    - Most hacks respond to mouse-clicks, double-taps and swipes as
      meaning "do something different now".
    - Reworked OpenGL fonts.
    - Various minor fixes.
  * Bump Standards-Version to 3.9.6 (no changes needed)
  * debian/copyright: hacks/kumppa uses X11 license

 -- Tormod Volden <debian.tormod@gmail.com>  Tue, 07 Oct 2014 23:05:43 +0200

xscreensaver (5.29-1) unstable; urgency=low

  * New upstream release 5.29, changes since 5.26:
    - New hacks, `tessellimage' and `projectiveplane'.
    - Added support for pthreads, because Dave Odell is a madman.
    - Updated `webcollage' for recent changes.
    - X11: Don't assume Suspend = 0 implies "No DPMS".
    - Minor updates to `boxed' and `klein'.
    - Fixed possible crash in `apple2', `noseguy', `xmatrix', `shadebobs'.
    - Plugged some leaks.
    - Fixed some compilation problems and intermittent crashes.
    - Updated `webcollage' for recent changes.

 -- Tormod Volden <debian.tormod@gmail.com>  Mon, 22 Sep 2014 08:09:14 +0200

xscreensaver (5.26-1) unstable; urgency=low

  * New upstream release 5.26, changes since 5.23: